Fixing demo url wrapping in song editor component

--- a/app/components/song-editor/song-editor.component.scss
+++ b/app/components/song-editor/song-editor.component.scss
@@ -92,6 +92,7 @@
 
       .url-demo {
         word-break: normal;
+        white-space: nowrap;
       }
     }
   }
